--- a/README
+++ b/README
@@ -7,3 +7,7 @@ http://ukhas.org.uk/
 #highaltitude on irc.freenode.net (I can be found here as schofieldau)
 
 I can be reached via email at me@ajhutton.net
+
+Attributions (thanks to):
+Mikal Hart for the TinyGPS library (http://arduiniana.org/libraries/tinygps/)
+Will Duckworth for his RTTY library (http://wdhab.blogspot.com/2011/11/rtty-library-for-arduino.html)
